; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_xcb.c_register_xkb_keyevents.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_xcb.c_register_xkb_keyevents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@conn = common dso_local global i32 0, align 4
@xcb_xkb_id = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"xkb is not present on this server\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [22 x i8] c"initializing xcb-xkb\0A\00", align 1
@XCB_XKB_MAJOR_VERSION = common dso_local global i32 0, align 4
@XCB_XKB_MINOR_VERSION = common dso_local global i32 0, align 4
@XCB_XKB_ID_USE_CORE_KBD = common dso_local global i32 0, align 4
@XCB_XKB_EVENT_TYPE_STATE_NOTIFY = common dso_local global i32 0, align 4
@xkb_base = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @register_xkb_keyevents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @register_xkb_keyevents() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = load i32, i32* @conn, align 4
  %3 = call %struct.TYPE_3__* @xcb_get_extension_data(i32 %2, i32* @xcb_xkb_id)
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %1, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %0
  %9 = call i32 @ELOG(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @EXIT_FAILURE, align 4
  %11 = call i32 @exit(i32 %10) #3
  unreachable

12:                                               ; preds = %0
  %13 = call i32 @DLOG(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  %14 = load i32, i32* @conn, align 4
  %15 = load i32, i32* @XCB_XKB_MAJOR_VERSION, align 4
  %16 = load i32, i32* @XCB_XKB_MINOR_VERSION, align 4
  %17 = call i32 @xcb_xkb_use_extension(i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* @conn, align 4
  %19 = load i32, i32* @XCB_XKB_ID_USE_CORE_KBD, align 4
  %20 = load i32, i32* @XCB_XKB_EVENT_TYPE_STATE_NOTIFY, align 4
  %21 = load i32, i32* @XCB_XKB_EVENT_TYPE_STATE_NOTIFY, align 4
  %22 = call i32 @xcb_xkb_select_events(i32 %18, i32 %19, i32 %20, i32 0, i32 %21, i32 255, i32 255, i32* null)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* @xkb_base, align 4
  ret void
}

declare dso_local %struct.TYPE_3__* @xcb_get_extension_data(i32, i32*) #1

declare dso_local i32 @ELOG(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @DLOG(i8*) #1

declare dso_local i32 @xcb_xkb_use_extension(i32, i32, i32) #1

declare dso_local i32 @xcb_xkb_select_events(i32, i32, i32, i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
